[package]
name = "testing-tracing-instrumentation"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tracing-flame = "0.2.0"
tracing-subscriber = "0.3.17"
tracing = { version = "0.1.37", features = ["attributes"] }

[dev-dependencies]
uuid = { version = "1.4.1", features = ["v4"] }
inferno = "0.11.15"
itertools = "0.11.0"